-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.614 2009-09-11 15:34:55 remko Exp $
-----------------------------------------------------------------------------------------

2009-09-11	remko
	* gmtdefaults_*.in:	Enter TRANSPARENCY = 0; replaced color triplets by names.
	* gmt_init.c:		Let gmtdefaults output TRANSPARENCY and print colors as names
				if available.
	* gmt_support.c:	Added GMT_getrgb_index to get index of preset RGB triplets.

2009-09-10	pwessel
	* grdcontour.c:		The -L option was not used in limiting contours.
	
2009-09-10	remko
	* gmt_init.c:		Introduced option to make material transparent using the
				--TRANSPARENCY setting (or gmtset TRANSPARENCY). Can be viewed
				with Adobe Distiller (only?).
	* gmt_plot.c, gmtdefaults.txt, gmt.h, gmt_globals.h, gmt_keywords.d:	---"---
	* psclip.c, pscoast.c:	Replaced booleans GMT_ps.clip_on and GMT_ps.clip_off with single
				GMT_ps.clip with values -1, 0 or +1.
	* configure.ac, all makefiles:	Needed to redo the way GDAL_INC and GDAL_LIB are inserted.
				-I (without anything) of -L (without anything) when GDAL is not
				enabled makes compiling impossible. So *_LIB and *_INC (also
				NETCDF) now include the -I and -L/-l flags.

2009-09-10	jluis
	* mgd77/mgd77magref.c:	It now lets the Core field be computed with the IGRF and added
				to the atmospheric sources calculated with CM4. We added
				this because the secular variation in CM4 is limited to 2002.5
				but the "atmospheric coefficients" can be continuously updated

2009-09-09	pwessel
	* LICENSE.TXT:		Replaced file COPYING with LICENSE.TXT and clarified we are
	  			using GPL v2 as displayed in all source files.
	* GSHHS*:		Updated to GSHHS 2.0.1 so new pscoast options can work
	* configure.ac:		Added --enable-gdal[=dir] for experimental GDAL grid import
				functionality for reading GDAL-supported grids (one band) and
				plotting of geotiff via grdimage

2009-09-08	pwessel